fixed section-two alignment issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -707,14 +707,15 @@ p.section-one-heading {
     }
     .grid-card {
         border-radius: 10px;
-        margin-right: 20px;
+    }
+    .section-two-nav {
+        justify-content: center;
     }
     .grid-card-container {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         gap: 20px;
-        margin-left: 20px;
         margin-right: 0;
     }
     .section-navbar {
@@ -749,10 +750,10 @@ p.section-one-heading {
 
     .section-four-heading {
         margin-bottom: 30px;
+        text-align: center;
     }
     .cards-container {
         flex-wrap: wrap;
-        padding: 0 20px;
     }
     .card1, .card2, .card3 {
         border-radius: 10px;
@@ -764,10 +765,6 @@ p.section-one-heading {
 
 
     /* footer section  */
-
-    .footer-row {
-        padding: 10px;
-    }
 
     .footer-col {
         width: 50%;
